--- a/donors2.html
+++ b/donors2.html
@@ -2,7 +2,7 @@
   
   
   
-   <link href="/Doners2.css" rel="stylesheet" type="text/css" media="all">
+   <link href="Doners2.css" rel="stylesheet" type="text/css" media="all">
   
 <body>
 <form action="action_page.php">
