--- a/Results_student.html
+++ b/Results_student.html
@@ -16,6 +16,7 @@
 <p><em>Date:</em> Ongoing</p>
 <p><em>Location:</em> 730 Concourse Village West,Bronx,NY,10461</p>
 <p><em>Category:</em> Education</p>
+<p><em>Days:</em> Monday/Wensday</p>
 <input type="checkbox" name="vehicle" value="Bike">$17/hr<br>
 
 </div>	
