--- a/donors2.html
+++ b/donors2.html
@@ -2,7 +2,7 @@
   
   
   
-   <link href="Doners2.css" rel="stylesheet" type="text/css" media="all">
+   <link href="/Doners2.css" rel="stylesheet" type="text/css" media="all">
   
 <body>
 <form action="action_page.php">
@@ -90,7 +90,7 @@ Postal Code<br>
 
 <div class="submit">
       <button type="button">
-        <a href="coverpage.html">
+        <a href="index.html">
           Submit
         </a>
       </button>
